infra/k8s/auth-mongo-depl.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: auth-mongo-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: auth-mongo
   template:
     metadata:
       labels:
         app: auth-mongo
     spec:
       containers:
       - name: auth-mongo
         image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  type: ClusterIP
  selector:
    app: auth-mongo
  ports:
  - name: db-mongo
    protocol: TCP
    port: 27017
    targetPort: 27017
