infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
      - host: abc.com
        http:
              paths:
                  - path: /api/users/?(.*)
                    backend:
                          serviceName: auth-srv
                          servicePort: 3100
                  - path: /api/complaints/?(.*)
                    backend:
                          serviceName: complaints-srv
                          servicePort: 3000        
                  - path: /?(.*)
                    backend:
                          serviceName: client-srv
                          servicePort: 3000
